# infinite-autocrafter

./: .gitignore  CMakeLists.txt
cmake/: FindJSONC.cmake
include/: data.h  fix.h  net_utils.h  pair.h  random.h  save_handling.h
src/: data.c  fix.c  main.c  net_utils.c  pair.c  random.c  save_handling.c
